--- a/index.html
+++ b/index.html
@@ -39,8 +39,19 @@
     </header>
 
   <!---------------------------------------MODAL-------------------------->
-  
+    <div class="modal-container">
+  <section class="modal">
+      <img class="modal-close" src="./assets/images/icon-menu-close.svg" alt="menu-close">
 
+      <ul class="modal-navbar">
+        <li class="modal-link">Home</li>
+        <li class="modal-link">New</li>
+        <li class="modal-link">Popular</li>
+        <li class="modal-link">Trending</li>
+        <li class="modal-link">Categories</li>
+      </ul>
+    </section>
+      </div>
     <!-- ------------------CABECERA PRINCIPAL---------------------------- -->
     <section class="section-container">
 
